実行時エラー解消

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,5 +8,5 @@ inherit_from:
   - "config/rubocop/rspec.yml"
 
 AllCops:
-  TargetRubyVersion: *.*.*
-  TargetRailsVersion: *.*.*.*
+  TargetRubyVersion: 2.7.1
+  TargetRailsVersion: "*.*.*.*"
