--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,7 @@ default: &default
   username: root
   password: password
   host: db
-  
+
 development:
   <<: *default
   database: myapp_development
@@ -52,3 +52,4 @@ production:
   database: myapp_production
   username: myapp
   password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
+  url: <%= ENV['JAWSDB_URL']&.sub('mysql://', 'mysql2://') %>
