--- a/config/rubocop/rubocop.yml
+++ b/config/rubocop/rubocop.yml
@@ -382,6 +382,7 @@ Rails/WhereExists: # new in 2.7
   Enabled: true
 Rails/WhereNot: # new in 2.8
   Enabled: true
+# rubocop:disable Style/LineLength, Style/StringLiterals
 RSpec/ExcessiveDocstringSpacing: # new in 2.5
   Enabled: true
 RSpec/IdenticalEqualityAssertion: # new in 2.4
@@ -396,3 +397,4 @@ Lint/UselessRuby2Keywords: # new in 1.23
   Enabled: true
 Style/OpenStructUse: # new in 1.23
   Enabled: true
+# rubocop:enable Style/LineLength, Style/StringLiterals
